# FMI-Bachelor-Projects

./: .gitignore  README.md
AStar/: CMakeLists.txt  main.cpp
Arduino/: stepper_motors.ino
BlacklistChecker/src/: BlacklistClient.java
C/: MinimalActiveObject.c  basic_abstract_factory.c  basic_virtual_table.c  vector_t.c
ComputationalGeometry/: PointInTriangle.cpp
ComputationalGeometry/Algorithms/: Algorithms.sln  main.cpp
ComputationalGeometry/Jarvis/: Jarvis.vcxproj  Jarvis.vcxproj.filters  main.cpp  points.txt
ComputationalGeometry/TrianglesAndPolygons/: TrianglesAndPolygons.sln
ComputationalGeometry/python_implementations/: polygons.py
DB2/: CourseProject.sql
DSA/DataStructuresAndAlgorithms/: DataStructuresAndAlgorithms.sln  custom_sqrt.cpp  generic_dijkstra.cpp
DataStructures/EasyChallenges/: EasyChallenges.sln
DataStructures/Graphs/: Graphs.sln
Direct3D_Demo/: Direct3D_Demo.sln
DirectX11_Demo/: DirectX11_Demo.sln
ExamOOP/ExamOOP/: ExamOOP.sln
FMICoin/: FMICoin.sln
Haskell/: specI_group3_fn45398.hs
HelloVulkan/: HelloVulkan.cpp  HelloVulkan.h  Makefile  main.cpp
HelloWorldToMachineLearningLinearRegression/: code.py
MATLAB/: exponentfunc.m
MatplotlibExamples/: matplotdrawing.py
Numerical Integration/: CrankNicolson.nb  KrankNicolson.nb  RK.nb  adams.nb  euler.nb
NumpyExamples/: arrays.py  dataloading.py  numpyarrvslistspeed.py  vectorsmatrices.py
OS/: forksandpipes.cpp  lines_count.cpp
Polynoms/: Polynoms.sln
Prolog/: PathsAndGraphs.pl  exam.pl
TurboAssembly/: find.asm
makefiles/: hellofunc.c  hellomake.c  makefile
(+270 files in other folders)
